load("@rules_jvm_external//:defs.bzl", "artifact")

java_test(name="FindByNgWebDriverTest",
  srcs=["FindByNgWebDriverTest.java"],
  deps=[artifact("junit:junit"),
        artifact("org.hamcrest:hamcrest-library"),
        artifact("org.seleniumhq.selenium:selenium-api"),
        artifact("org.seleniumhq.selenium:selenium-support"),
        "//src/main/java/com/paulhammant/ngwebdriver:ngwebdriver"]
)

java_test(name="AngularAndWebDriverTest",
  tags=["no-sandbox"],
#  tags=["requires-network"],
  size="large",
  srcs=["AngularAndWebDriverTest.java"],
  deps=[
        artifact("junit:junit"),
        artifact("org.hamcrest:hamcrest-library"),
        artifact("org.seleniumhq.selenium:selenium-api"),
        artifact("org.seleniumhq.selenium:selenium-support"),
        artifact("org.seleniumhq.selenium:selenium-chrome-driver"),
        artifact("org.seleniumhq.selenium.fluent:fluent-selenium"),
        artifact("org.eclipse.jetty:jetty-server"),
        artifact("org.eclipse.jetty:jetty-util"),
        "//src/main/java/com/paulhammant/ngwebdriver:ngwebdriver"]
)
